# 360cam

./: CMakeLists.txt  classify_folder.py
include/: hikcam.hpp
src/: capture.cpp  hikcam.cpp
